feat: optimize build system and implement SE3 manifold parameterization for ICP
- Optimize third-party dependency build system:
  * Remove build steps for Sophus and spdlog (header-only libraries)
  * Update CMakeLists.txt to use header-only approach
  * Streamline build.sh script to skip unnecessary builds

- Implement SE3GlobalParameterization for robust pose optimization:
  * Add SE3 manifold parameterization using Sophus SE3 exp/log mapping
  * Ensure rotation matrix orthogonality through proper normalization
  * Fix Sophus orthogonality assertion errors with matrix regularization

- Enhance ICP optimization with manifold constraints:
  * Use SE3GlobalParameterization in Ceres optimization
  * Replace manual tangent space conversion with proper SE3 operations
  * Add rotation matrix normalization to prevent numerical issues

- Fix compilation warnings and errors:
  * Resolve sign comparison warnings (size_t vs int)
  * Make SE3GlobalParameterization utility functions public
  * Add proper includes for optimization parameters

- Update configuration parameters:
  * Adjust PKO scale factor bounds for better convergence
  * Maintain backward compatibility with existing configs

This update significantly improves build performance by eliminating unnecessary
compilation steps and enhances pose estimation accuracy through proper SE3
manifold handling, resolving runtime crashes caused by non-orthogonal matrices.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,17 +37,11 @@ set(BUILD_PANGOLIN_TESTS OFF CACHE BOOL "Build Pangolin tests" FORCE)
 set(BUILD_PANGOLIN_TOOLS OFF CACHE BOOL "Build Pangolin tools" FORCE)
 add_subdirectory(${THIRDPARTY_DIR}/pangolin ${CMAKE_BINARY_DIR}/pangolin EXCLUDE_FROM_ALL)
 
-# Build Sophus from thirdparty
-set(BUILD_TESTS OFF CACHE BOOL "Build Sophus tests" FORCE)
-set(BUILD_SOPHUS_TESTS OFF CACHE BOOL "Build Sophus tests" FORCE)
-set(BUILD_SOPHUS_EXAMPLES OFF CACHE BOOL "Build Sophus examples" FORCE)
-add_subdirectory(${THIRDPARTY_DIR}/Sophus ${CMAKE_BINARY_DIR}/Sophus)
+# Sophus is header-only, no need to build
+# Just include the headers
 
-# Build spdlog from thirdparty
-set(SPDLOG_BUILD_EXAMPLE OFF CACHE BOOL "Build spdlog examples" FORCE)
-set(SPDLOG_BUILD_TESTS OFF CACHE BOOL "Build spdlog tests" FORCE)
-set(SPDLOG_BUILD_BENCH OFF CACHE BOOL "Build spdlog benchmarks" FORCE)
-add_subdirectory(${THIRDPARTY_DIR}/spdlog ${CMAKE_BINARY_DIR}/spdlog)
+# spdlog is header-only, no need to build
+# Just include the headers
 
 # Build Ceres from thirdparty
 set(CERES_DIR ${THIRDPARTY_DIR}/ceres-solver)
@@ -122,8 +116,6 @@ target_link_libraries(lidar_odometry
     GLEW::GLEW
     Threads::Threads
     ceres
-    Sophus::Sophus
-    spdlog::spdlog
     pango_display
     pango_windowing
     pango_opengl
