--- a/config/kitti.yaml
+++ b/config/kitti.yaml
@@ -1,7 +1,7 @@
-# Data paths
-data_directory: "/home/eugene/data/KITTI/Velodyne"
-ground_truth_directory: "/home/eugene/data/KITTI/GroundTruth"
-output_directory: "/home/eugene/data/KITTI/Result"
+# Data paths - Update these paths to your dataset location
+data_directory: "/path/to/your/kitti_dataset/sequences"
+ground_truth_directory: "/path/to/your/kitti_dataset/poses"  
+output_directory: "./results"
 seq: "07"
 
 # Player settings
