docs: Add IEEE paper URL link to PKO citation
- Add direct link to IEEE Xplore paper in the PKO introduction
- Make it easier for users to access the original PKO paper
- Clean up paper URL formatting for better readability

--- a/config/kitti.yaml
+++ b/config/kitti.yaml
@@ -1,7 +1,7 @@
-# Data paths - Update these paths to your dataset location
-data_directory: "/path/to/your/kitti_dataset/sequences"
-ground_truth_directory: "/path/to/your/kitti_dataset/poses"  
-output_directory: "./results"
+# Data paths
+data_directory: "/home/eugene/data/KITTI/Velodyne"
+ground_truth_directory: "/home/eugene/data/KITTI/GroundTruth"
+output_directory: "/home/eugene/data/KITTI/Result"
 seq: "07"
 
 # Player settings
@@ -38,7 +38,7 @@ odometry:
 robust_estimation:
   use_adaptive_m_estimator: true
   loss_type: "cauchy"                 # "cauchy", "huber"
-  scale_method: "MAD"                 # "MAD", "fixed", "PKO"
+  scale_method: "PKO"                 # "MAD", "fixed", "PKO"
   fixed_scale_factor: 1.0
   mad_multiplier: 1.4826             # MAD to std conversion factor
   cauchy_multiplier: 2.3849          # Cauchy loss multiplier
