--- a/config/kitti.yaml
+++ b/config/kitti.yaml
@@ -16,7 +16,8 @@ player:
 # Point cloud processing
 point_cloud:
   voxel_size: 0.4
-  max_range: 60.0
+  map_voxel_size: 0.4                 # Map points downsampling voxel size
+  max_range: 40.0
   min_range: 0.1
 
 # Feature extraction
@@ -31,42 +32,35 @@ feature_extraction:
 # Odometry settings
 odometry:
   max_iterations: 10
-  convergence_threshold: 0.001
+  translation_threshold: 0.001        # Translation convergence threshold (meters)
+  rotation_threshold: 0.001           # Rotation convergence threshold (radians)
   max_correspondence_distance: 1.0  # KITTI is large scale environment
   
 # Robust estimation settings
 robust_estimation:
   use_adaptive_m_estimator: true
-  loss_type: "cauchy"                 # "cauchy", "huber"
-  scale_method: "PKO"                 # "MAD", "fixed", "PKO"
-  fixed_scale_factor: 1.0
-  mad_multiplier: 1.4826             # MAD to std conversion factor
-  cauchy_multiplier: 2.3849          # Cauchy loss multiplier
-  huber_multiplier: 1.345            # Huber loss multiplier
-  min_scale_factor: 0.5              # PKO alpha lower bound
-  max_scale_factor: 10.0                # PKO alpha upper bound
+  min_scale_factor: 1.0              # PKO alpha lower bound
+  max_scale_factor: 10.0             # PKO alpha upper bound
   
   # PKO (Probabilistic Kernel Optimization) parameters
   num_alpha_segments: 100
-  truncated_threshold: 10.0         # 백업과 동일하게 10.0으로 수정
-  gmm_components: 5
+  truncated_threshold: 10.0
+  gmm_components: 3
   gmm_sample_size: 100               # 10% of typical data size
-  pko_kernel_type: "cauchy"    # 백업과 동일한 cauchy kernel 사용
+  pko_kernel_type: "huber"          # PKO kernel type ("cauchy", "huber")
 
 # Estimator settings
 estimator:
-  keyframe_distance_threshold: 2.0  # Larger distance for KITTI
+  keyframe_distance_threshold: 5.0  # Larger distance for KITTI
   keyframe_rotation_threshold: 0.3   # ~17 degrees
   min_correspondence_points: 50      # More points needed for stability
-  max_solver_iterations: 100         # More iterations for convergence
   parameter_tolerance: 1e-6          # More relaxed tolerance
   function_tolerance: 1e-6           # More relaxed tolerance
-  max_map_frames: 10                 # Fewer frames for efficiency
 
 # Viewer settings
 viewer:
-  viewer_width: 3000
-  viewer_height: 2000
+  viewer_width: 2000
+  viewer_height: 1500
   point_size: 2.0
   feature_point_size: 5.0
   trajectory_width: 2.0
