--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -1,8 +1,7 @@
 # Data paths
-data_directory: "/home/eugene/data/KITTI/Velodyne"
-ground_truth_directory: "/home/eugene/data/KITTI/GroundTruth"
-output_directory: "/home/eugene/data/KITTI/Result"
-seq: "07"
+data_directory: "/home/eugene/data/MID360"
+output_directory: "/home/eugene/data/MID360/Result"
+seq: "slam"
 
 # Player settings
 player:
@@ -16,8 +15,8 @@ player:
 # Point cloud processing
 point_cloud:
   voxel_size: 0.4                    # Very small voxel size (almost no downsampling)
-  map_voxel_size: 0.4                # Map points downsampling voxel size (increased for better performance)
-  max_range: 40.0
+  map_voxel_size: 0.4                # Map points downsampling voxel size
+  max_range: 30.0
   min_range: 0.1
 
 # Feature extraction
@@ -28,7 +27,6 @@ feature_extraction:
   collinearity_threshold: 0.05
   max_neighbor_distance: 0.5
   feature_quality_threshold: 0.1
-  feature_voxel_size: 0.1               # Voxel size for feature extraction
 
 # Odometry settings
 odometry:
@@ -36,18 +34,6 @@ odometry:
   translation_threshold: 0.005        # Translation convergence threshold (meters)
   rotation_threshold: 0.005           # Rotation convergence threshold (radians)
   max_correspondence_distance: 1.0  # KITTI is large scale environment
-
-# Optimization settings  
-optimization:
-  enable_debug: true
-  max_pairs_offset: 5
-
-# Multi-frame optimization settings
-multi_frame:
-  window_size: 3                     # Number of keyframes in sliding window (excluding current frame)
-  min_keyframe_correspondence_ratio: 0.1  # Minimum correspondence ratio per keyframe
-  min_correspondences_per_keyframe: 50     # Minimum correspondences required per keyframe
-  use_adaptive_window: false         # Dynamically adjust window size based on correspondences
   
 # Robust estimation settings
 robust_estimation:
@@ -60,12 +46,12 @@ robust_estimation:
   truncated_threshold: 10.0
   gmm_components: 3
   gmm_sample_size: 100               # 10% of typical data size
-  pko_kernel_type: "cauchy"          # PKO kernel type ("cauchy", "huber")
+  pko_kernel_type: "huber"          # PKO kernel type ("cauchy", "huber")
 
 # Estimator settings
 estimator:
   keyframe_distance_threshold: 1.0  # Larger distance for KITTI
-  keyframe_rotation_threshold: 0.3  
+  keyframe_rotation_threshold: 0.3   # ~17 degrees
   min_correspondence_points: 50      # More points needed for stability
   parameter_tolerance: 1e-6          # More relaxed tolerance
   function_tolerance: 1e-6           # More relaxed tolerance
