loop detection with lidar iris(MIT License)

--- a/config/kitti.yaml
+++ b/config/kitti.yaml
@@ -70,6 +70,16 @@ estimator:
   parameter_tolerance: 1e-6          # More relaxed tolerance
   function_tolerance: 1e-6           # More relaxed tolerance
 
+# Loop closure detection settings
+loop_detector:
+  enable_loop_detection: true
+  similarity_threshold: 0.3          # Lower is more similar (0.0 = identical)
+  min_keyframe_gap: 100               # Dual purpose: 1) Min keyframe ID gap for candidate search, 2) Cooldown gap after successful loop closure
+  max_search_distance: 5.0          # Maximum distance (meters) to search for loop candidates
+  enable_debug_output: true          # Enable detailed debug logging
+  
+  # Note: Iris min/max range will be automatically set based on point_cloud.max_range * 1.2
+
 # Viewer settings
 viewer:
   viewer_width: 3000
