pgo test using gtsam

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,13 @@ include_directories(
     ${CMAKE_BINARY_DIR}/thirdparty/ceres-solver/include
     ${THIRDPARTY_DIR}/nanoflann/include
     ${THIRDPARTY_DIR}/LidarIris
+    ${THIRDPARTY_DIR}/gtsam
+    ${THIRDPARTY_DIR}/gtsam/build
     ${OpenCV_INCLUDE_DIRS}
 )
+
+# Link directories for GTSAM
+link_directories(${THIRDPARTY_DIR}/gtsam/build/gtsam)
 
 # Common source files for all executables
 set(COMMON_SOURCES
@@ -89,6 +94,7 @@ set(COMMON_SOURCES
     src/optimization/Parameters.cpp
     src/optimization/Factors.cpp
     src/optimization/AdaptiveMEstimator.cpp
+    src/optimization/PoseGraphOptimizer.cpp
     
     # Viewer module
     src/viewer/PangolinViewer.cpp
@@ -133,6 +139,8 @@ target_link_libraries(kitti_lidar_odometry
     GLEW::GLEW
     Threads::Threads
     ceres
+    gtsam
+    tbb
     pango_display
     pango_windowing
     pango_opengl
@@ -149,6 +157,8 @@ target_link_libraries(mid360_lidar_odometry
     GLEW::GLEW
     Threads::Threads
     ceres
+    gtsam
+    tbb
     pango_display
     pango_windowing
     pango_opengl
