--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,6 +92,7 @@ set(LIDAR_ODOMETRY_SOURCES
     optimization/Parameters.cpp
     optimization/Factors.cpp
     optimization/AdaptiveMEstimator.cpp
+    optimization/PoseGraphOptimizer.cpp
     
     # Viewer module
     viewer/PangolinViewer.cpp
