pgo using gtsam

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,9 @@ set(PROVIDE_UNINSTALL_TARGET OFF CACHE BOOL "Disable Ceres uninstall target" FOR
 set(CMAKE_DISABLE_FIND_PACKAGE_Ceres ON)
 add_subdirectory(${CERES_DIR} ${CMAKE_BINARY_DIR}/ceres EXCLUDE_FROM_ALL)
 
+# Find GTSAM
+find_package(GTSAM REQUIRED PATHS ${THIRDPARTY_DIR}/gtsam/build NO_DEFAULT_PATH)
+
 # Include directories
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -68,6 +71,7 @@ include_directories(
     ${THIRDPARTY_DIR}/nanoflann/include
     ${THIRDPARTY_DIR}/LidarIris
     ${OpenCV_INCLUDE_DIRS}
+    ${GTSAM_INCLUDE_DIR}
 )
 
 # Common source files for all executables
@@ -90,6 +94,7 @@ set(COMMON_SOURCES
     src/optimization/Factors.cpp
     src/optimization/AdaptiveMEstimator.cpp
     src/optimization/PoseGraphOptimizer.cpp
+    src/optimization/PoseGraphOptimizerGTSAM.cpp
     
     # Viewer module
     src/viewer/PangolinViewer.cpp
@@ -141,6 +146,7 @@ target_link_libraries(kitti_lidar_odometry
     pango_core
     pango_image
     ${OpenCV_LIBS}
+    gtsam
     m  # Math library for M_PI
     stdc++fs  # For std::filesystem
 )
@@ -158,6 +164,7 @@ target_link_libraries(mid360_lidar_odometry
     pango_core
     pango_image
     ${OpenCV_LIBS}
+    gtsam
     m  # Math library for M_PI
     stdc++fs  # For std::filesystem
 )
